.k8s/overlays/prod/patch-deployment-mlapi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-important
spec:
  template:
    spec:
      containers:
        - name: project
          image: w255mids.azurecr.io/hsiungc/project:4bf43d9
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
